--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <h1 id = "Top">Zac's Travel Adventures</h1> 
-   <a href="../index2.html">Zac's Resume</a>
+   <a href="./resume.html">Zac's Resume</a>
    <h2>Funnest Adventures that I have been on</h2>
    <ul>
         <li>Gunlock</li>
